--- a/package.json
+++ b/package.json
@@ -12,22 +12,30 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
-    "@astrojs/react": "^3.6.3",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/bungee-shade": "^5.1.0",
     "@fontsource/geist-mono": "^5.1.0",
     "@fontsource/geist-sans": "^5.1.0",
+    "@sanity/astro": "^3.2.5",
+    "@sanity/client": "^6.28.0",
+    "@sanity/image-url": "^1.1.0",
     "@storyblok/astro": "^5.0.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^4.16.8",
     "astro-pagefind": "^1.6.0",
     "clsx": "^2.1.1",
+    "groq": "^3.76.3",
     "motion": "^11.12.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-is": "^19.0.0",
+    "sanity": "^3.76.3",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
